--- a/linkapi-movies/src/app/screens/movies-feed/movies-feed.component.html
+++ b/linkapi-movies/src/app/screens/movies-feed/movies-feed.component.html
@@ -1,7 +1,12 @@
-<div class="logo-container">
-    <img class="logo-icon" src="../../../assets/img/logo-verde.svg" alt="Logo">
-    <p class="logo-text">
-        movies
-    </p>
-    
+
+<div class="main-container">
+    <div class="header-container">
+        <div class="logo-container">
+            <img class="logo-icon" src="../../../assets/img/logo-verde.svg" alt="Logo">
+            <p class="logo-text">
+                movies
+            </p>
+        </div>
+        <i class="fa fa-user-circle user-icon" aria-hidden="true"></i>
+    </div>
 </div>
