--- a/linkapi-movies/src/app/screens/movies-feed/movies-feed.component.scss
+++ b/linkapi-movies/src/app/screens/movies-feed/movies-feed.component.scss
@@ -1,17 +1,32 @@
-.logo-container {
-    display: flex;
-    margin-bottom: 100px;
+.main-container {
+    margin: 40px 80px;
 
-    .logo-icon {
-        width: 150px;
-        margin-right: 10px;
-        color: #37B987;
+    .header-container {
+        display: flex;
+        align-items: baseline;
+        justify-content: space-between;
+        .logo-container {
+            display: flex;
+            align-items: center;
+            margin-bottom: 100px;
+        
+            .logo-icon {
+                width: 150px;
+                margin-right: 10px;
+                color: #37B987;
+            }
+        
+            .logo-text {
+                font-family: Metropolis Semi;
+                font-size: 20px;
+                letter-spacing: 0px;
+                color: #37B987;
+            }
+        }
+        .user-icon {
+            font-size: 30px;
+            color: #A0AFA0;
+        }
     }
 
-    .logo-text {
-        font-family: Metropolis Semi;
-        font-size: 20px;
-        letter-spacing: 0px;
-        color: #37B987;
-    }
 }
