--- a/linkapi-movies/src/styles.scss
+++ b/linkapi-movies/src/styles.scss
@@ -23,3 +23,6 @@
   font-family: Google sans;
   src: url(assets/fonts/ProductSans-Regular.ttf) format("opentype");
 } 
+
+$fa-font-path: "../node_modules/font-awesome/fonts";
+@import "../node_modules/font-awesome/scss/font-awesome.scss";
