Subindo alterações e updates, tela de filmes pronta e já está consumindo a api

--- a/linkapi-movies/src/app/components/inputs/inputs.component.html
+++ b/linkapi-movies/src/app/components/inputs/inputs.component.html
@@ -1,2 +1,2 @@
 <p class="form-step">{{ label }}</p>
-<input type="text" class="main-input">
+<input type="text" class="main-input" placeholder="{{ lblPlaceholder }}" [ngStyle]="customStyle">
