--- a/linkapi-movies/src/app/screens/movies-feed/movies-feed.component.scss
+++ b/linkapi-movies/src/app/screens/movies-feed/movies-feed.component.scss
@@ -1,4 +1,7 @@
 .main-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     margin: 40px 80px;
 
     .header-container {
@@ -29,4 +32,49 @@
         }
     }
 
+    .filter-container {
+        display: flex;
+        align-items: flex-end;
+        width: 100%;
+
+        .search-container {
+            display: flex;
+            width: 100%;
+            border-bottom: 1px solid #C8D2BE;
+
+            app-inputs {
+                width: 100%;
+            }
+    
+            .search-icon {
+                color: #A0AFA0;
+            }
+    
+        }
+
+        .favorites-filter {
+            color: #A0AFA0;
+            font-family: Proxima Nova;
+            margin: 0 0 0 30px;
+        }
+    }
+
+    .movies-container {
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        margin-top: 30px;
+
+        .movie-card {
+            display: flex;
+            margin: 5px 5px;
+            width: 185px;
+            height: 255px;
+
+            .movie-poster {
+                width: 100%;
+            }
+        }
+
+    }
 }
