--- a/linkapi-movies/src/app/components/inputs/inputs.component.scss
+++ b/linkapi-movies/src/app/components/inputs/inputs.component.scss
@@ -9,9 +9,31 @@
     border-bottom: 1px solid #C8D2BE;
     color: #A0AFA0;
     margin-bottom: 25px;
+    width: 100%;
 }
 
 .main-input:focus{
     outline: none;
     border-bottom: 1px solid #a1a1a1;
+}
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: #A0AFA0;
+    font-family: Proxima Nova;
+    font-size: 14px;
+}
+::-moz-placeholder { /* Firefox 19+ */
+    color: #A0AFA0;
+    font-family: Proxima Nova;
+    font-size: 14px;
+}
+:-ms-input-placeholder { /* IE 10+ */
+    color: #A0AFA0;
+    font-family: Proxima Nova;
+    font-size: 14px;
+}
+:-moz-placeholder { /* Firefox 18- */
+    color: #A0AFA0;
+    font-family: Proxima Nova;
+    font-size: 14px;
 }
